--- a/alert_box_example/pubspec.yaml
+++ b/alert_box_example/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   alert_box:
     path: ../
+  # alert_box: ^0.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
